Fixed Collapse Icon on FTP Page and several CSS/JS Fixes

--- a/SBS/css/main.css
+++ b/SBS/css/main.css
@@ -586,7 +586,8 @@ a:before,
 .administration-table [href="?m=rcon&p=rcon"]:before { content: "\f120"; }
 .menu [href^="?m=gamemanager&p=rsync_install"] > span:before { content: "\f0ad"; }
 .menu [href^="?m=support"] > span:before { content: "\f1cd"; }
-.menu [href^="?m=faq"] > span:before { content: "\f29c"; }
+.menu [href^="?m=faq"] > span:before,
+.administration-table [href^="?m=faq"]:before{ content: "\f29c"; }
 .menu [href^="?m=fast_download"] > span:before,
 .administration-table [href^="?m=fast_download"]:before { content: "\f019"; }
 .menu [href^="?m=dsi"] > span:before,
