--- a/SBS/modules/ftp/ftp_admin.css
+++ b/SBS/modules/ftp/ftp_admin.css
@@ -21,3 +21,6 @@
 	content: "\f147";
 }
 
+#servermonitor td {
+	vertical-align: middle;
+}
